--- a/package.json
+++ b/package.json
@@ -35,5 +35,8 @@
 		"vite": "^4.4.2",
 		"vitest": "^0.32.2"
 	},
-	"type": "module"
+	"type": "module",
+	"dependencies": {
+		"firebase": "^10.5.0"
+	}
 }
